# em_proxy

./: .gitignore  Cargo.toml  Makefile  Package.swift  build.rs
.github/workflows/: build.yml
Sources/em_proxy/: SwiftBridgeCore.swift  em_proxy.swift
Sources/libem_proxy/: em_proxy.c  em_proxy.h
Sources/libem_proxy/include/: module.modulemap
Tests/em_proxyTests/: Test.swift
src/: lib.rs
