[package]
name = "em_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "run"
path = "src/run.rs"

[dependencies]
boringtun = { version = "0.4.0" }
once_cell = { version = "1.15.0" }
swift-bridge = { git = "https://github.com/naturecodevoid/swift-bridge" } # TODO: change to official repo once https://github.com/chinedufn/swift-bridge/pull/209 is merged

simple_logger = { version = "2.3.0" }
log = { version = "0.4.17" }

[dev-dependencies]
rand = { version = "*" }

[build-dependencies]
swift-bridge-build = { git = "https://github.com/naturecodevoid/swift-bridge" } # TODO: change to official repo once https://github.com/chinedufn/swift-bridge/pull/209 is merged

[lib]
crate-type = ["staticlib"]
